logs/Slang/generic/class/class_test_47.sv.log
name: class_test_47
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_47.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_47.sv:7:1: error: language feature not yet supported
class macros_id_as_call;
^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_47.sv:8:2: error: unknown macro or compiler directive '`uvm_new_func'
 `uvm_new_func
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_47.sv:9:2: error: unknown macro or compiler directive '`uvm_new_func2'
 `uvm_new_func2  // comment
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_47.sv:10:2: error: unknown macro or compiler directive '`uvm_new_func3'
 `uvm_new_func3  /* comment */
 ^
